# embrace

./: shell.nix
.github/workflows/: build.yml
nix/: build.nix  release.nix  sources.json
src/: CMakeLists.txt  config.cpp  config.hpp  config_tests.cpp  embrace.cpp
